12_playground/_archive/backups/k8s-basic/deploy/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-basic
  namespace: k8s
  labels:
    app: k8s-basic
spec:
  selector:
    app: k8s-basic
  type: ClusterIP
  ports:
  - name: http
    port: 8080
