12_playground/_archive/backups/k8s-basic/deploy/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-basic.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-basic
                port:
                  number: 8080
